<resources>
    <string name="app_name">Burger Haven</string>
    <string name="title">Burger Haven &amp; More</string>
    <string name="inicialButton">MENU</string>
    <string name="backbutton">simple back button</string>
    <string name="burgerIcon">simple burgerIcon</string>
    <string name="entIcon">simple entIcon</string>
    <string name="sodaIcon">simple sodaIcon</string>
    <string name="iceIcon">simple iceIcon</string>
    <string name="saladIcon">simple saladIcon</string>
    <string name="pizzaIcon">simple pizzaIcon</string>
    <string name="fastTime">Fast</string>
    <string name="moderateTime">Moderate</string>
    <string name="longTime">Slow</string>
    <string name="hamb">Burgers</string>
    <string name="ent">Appetizers</string>
    <string name="soda">Drinks</string>
    <string name="ice">Desserts</string>
    <string name="organic">Organic</string>
    <string name="pizza">Pizzas</string>
    <string name="hambbasicao">Basic</string>
    <string name="hambBigPicanha">Big Picanha</string>
    <string name="hambDoublePicanha">Double Picanha</string>
    <string name="hambSmokedClassic">Smoked Classic</string>
    <string name="hambBaconito">Baconito</string>
    <string name="hambChicko">Chicko</string>
    <string name="hambbasicaoprice">$7.90</string>
    <string name="hambbigpicanhaprice">$9.90</string>
    <string name="hambdoublepicanhaprice">$11.90</string>
    <string name="hambsmokedclassicprice">$12.90</string>
    <string name="hambBaconitoprice">$8.90</string>
    <string name="hambChickoprice">$10.90</string>
    <string name="hambBasicaoImgDesc">Our basic burger</string>
    <string name="hambBigPicanhaImgDesc">Our Big Picanha burger</string>
    <string name="hambDoublePicanhaImgDesc">Our Double Picanha burger</string>
    <string name="hambSmokedClassicImgDesc">Our favorite burger</string>
    <string name="hambBaconitoImgDesc">Our unique bacon burger</string>
    <string name="hambChickoImgDesc">Our best chicken burger</string>
    <string name="entPaoDeAlho">Garlic Bread</string>
    <string name="entArancine">Arancine</string>
    <string name="entRosbife">Rosbife</string>
    <string name="entBrusqueta">Brusqueta</string>
    <string name="entPaoDeAlhoPrice">$4.90</string>
    <string name="entArancinePrice">$3.90</string>
    <string name="entRosbifePrice">$2.90</string>
    <string name="entBrusquetaPrice">$5.90</string>
    <string name="entPaoDeAlhoDesc">PaoDeAlho ent</string>
    <string name="entArancineDesc">Arancine ent</string>
    <string name="entRosbifeDesc">Rosbife ent</string>
    <string name="entBrusquetaDesc">Brusqueta ent</string>
    <string name="sodaCocaCola">Coca Cola 350ml</string>
    <string name="sodaPepsi">Pepsi 350ml</string>
    <string name="sodaGuaranaJesus">Guarana 350ml</string>
    <string name="sodaSaoGeraldo">São Geraldo 1L</string>
    <string name="sodaItaipava">Itaipava 600ml</string>
    <string name="sodaHeineken">Heineken 600ml</string>
    <string name="sodaCocaColaPrice">$1.00</string>
    <string name="sodaPepsiPrice">$1.00</string>
    <string name="sodaGuaranaJesusPrice">$2.50</string>
    <string name="sodaSaoGeraldoPrice">$4.90</string>
    <string name="sodaItaipavaPrice">$1.50</string>
    <string name="sodaHeinekenPrice">$1.00</string>
    <string name="sodaCocaColaDesc">Coca Cola soda</string>
    <string name="sodaPepsiDesc">Pepsi soda</string>
    <string name="sodaGuaranaJesusDesc">Guaraná Jesus soda</string>
    <string name="sodaSaoGeraldoDesc">São Geraldo soda</string>
    <string name="sodaItaipavaDesc">Itaipava soda</string>
    <string name="sodaHeinekenDesc">Heineken soda</string>
    <string name="dessertBoloLimao">Lemon Cake</string>
    <string name="dessertBoloMorango">Strawberry Cake</string>
    <string name="dessertMaracuja">Passion Sweet</string>
    <string name="dessertBoloBanana">Banana Cake</string>
    <string name="dessertDoceDeChurros">Churro Sweet</string>
    <string name="dessertDoceDeLeiteNinho">Milk Jam Cake</string>
    <string name="dessertPaoDeMel">Honey Bread</string>
    <string name="dessertPaveDeAmendoim">Peanut Tiramisu</string>
    <string name="dessertBoloLimaoPrice">$8.90</string>
    <string name="dessertBoloMorangoPrice">$6.90</string>
    <string name="dessertMaracujaPrice">$1.90</string>
    <string name="dessertBoloBananaPrice">$7.90</string>
    <string name="dessertDoceDeChurrosPrice">$3.90</string>
    <string name="dessertDoceDeLeiteNinhoPrice">$5.90</string>
    <string name="dessertPaoDeMelPrice">$4.90</string>
    <string name="dessertPaveDeAmendoimPrice">$7.90</string>
    <string name="dessertBoloLimaoDesc">Lemon Cake dessert</string>
    <string name="dessertBoloMorangoDesc">Strawberry Cake dessert</string>
    <string name="dessertMaracujaDesc">Passion Fruit Sweet dessert</string>
    <string name="dessertBoloBananaDesc">Banana Cake dessert</string>
    <string name="dessertDoceDeChurrosDesc">Churro Sweet dessert</string>
    <string name="dessertDoceDeLeiteNinhoDesc">Milk Powder Sweet dessert</string>
    <string name="dessertPaoDeMelDesc">Honey Bread dessert</string>
    <string name="dessertPaveDeAmendoimDesc">Peanut Tiramisu dessert</string>
    <string name="organicSaladaAbacate">Avocado Salad</string>
    <string name="organicSaladaOvo">Potato Salad</string>
    <string name="organicSaladaRepolhoRoxo">Cabbage Salad</string>
    <string name="organicSaladaGraoDeBico">Chickpea Salad</string>
    <string name="organicSaladaAbacatePrice">R$7.90</string>
    <string name="organicSaladaOvoPrice">R$8.90</string>
    <string name="organicSaladaRepolhoRoxoPrice">R$10.90</string>
    <string name="organicSaladaGraoDeBicoPrice">R$12.90</string>
    <string name="organicSaladaAbacateDesc">Avocado Salad organic</string>
    <string name="organicSaladaOvoDesc">Egg Salad organic</string>
    <string name="organicSaladaRepolhoRoxoDesc">Purple Cabbage organic</string>
    <string name="organicSaladaGraoDeBicoDesc">Chickpea Salad organic</string>
    <string name="pizzaMista">Ham and Cheese</string>
    <string name="pizzaQuatroQueijos">Four Cheese</string>
    <string name="pizzaCalabresa">Pepperoni</string>
    <string name="pizzaCarneSol">Sun-Dried Meat</string>
    <string name="pizzaMistaPrice">$15.90</string>
    <string name="pizzaQuatroQueijosPrice">$14.90</string>
    <string name="pizzaCalabresaPrice">$16.90</string>
    <string name="pizzaCarneSolPrice">$19.90</string>
    <string name="pizzaMistaDesc">Ham and Cheese Pizza</string>
    <string name="pizzaQuatroQueijosDesc">Four Cheese Pizza</string>
    <string name="pizzaCalabresaDesc">Pepperoni Pizza</string>
    <string name="pizzaCarneSolDesc">Beef Jerky Pizza</string>
    <string name="cartTitle">Cart</string>
    <string name="payButton">Order</string>
    <string name="cartIcon">cart icon</string>
    <string name="cifra">$</string>
</resources>