<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_card"
    tools:context=".MenuSoda">




    <View
        android:id="@+id/headerContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/red_primary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"

        />

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        app:layout_constraintTop_toTopOf="@+id/headerContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/headerContainer"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/backbutton" />

    <TextView
        android:id="@+id/restaurantTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="times"
        android:text="@string/title"
        android:textSize="32sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@+id/headerContainer"
        app:layout_constraintStart_toEndOf="@+id/backButton"
        android:layout_marginStart="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/headerContainer"

        />


    <!--  COCA COLA  -->
    <View
        android:id="@+id/cocaCola"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/white_card"
        app:layout_constraintTop_toBottomOf="@+id/headerContainer"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintWidth_percent="0.45"
        app:layout_constraintHeight_percent="0.25"
        android:layout_marginTop="20dp"
        />

    <ImageView
        android:id="@+id/cocaColaImg"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:src="@drawable/cocacola"
        android:background="@drawable/rounded_corners"
        app:layout_constraintStart_toStartOf="@+id/cocaCola"
        app:layout_constraintTop_toTopOf="@+id/cocaCola"
        app:layout_constraintEnd_toEndOf="@+id/cocaCola"
        android:contentDescription="@string/sodaCocaColaDesc" />

    <TextView
        android:id="@+id/cocaColaName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sodaCocaCola"
        app:layout_constraintStart_toStartOf="@+id/cocaCola"
        app:layout_constraintTop_toBottomOf="@+id/cocaColaImg"
        app:layout_constraintEnd_toEndOf="@+id/cocaCola"
        android:textColor="@color/black"
        android:fontFamily="@font/interbold"
        android:textSize="20sp"

        />

    <TextView
        android:id="@+id/sodaDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/soda"
        app:layout_constraintStart_toStartOf="@+id/cocaCola"
        app:layout_constraintTop_toBottomOf="@+id/cocaColaName"
        app:layout_constraintEnd_toEndOf="@+id/cocaCola"
        android:textColor="@color/description"
        android:fontFamily="@font/interbold"
        android:textSize="15sp"

        />

    <View
        android:id="@+id/wrapPrice"
        android:layout_width="185dp"
        android:layout_height="32dp"
        android:layout_marginTop="0dp"
        app:layout_constraintStart_toStartOf="@+id/cocaCola"
        app:layout_constraintTop_toBottomOf="@+id/sodaDescription"
        app:layout_constraintEnd_toEndOf="@+id/cocaCola"
        app:layout_constraintBottom_toBottomOf="@+id/cocaCola"
        android:background="@drawable/rounded_price"

        />

    <TextView
        android:id="@+id/cocaColaPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sodaCocaColaPrice"
        android:layout_marginTop="1dp"
        app:layout_constraintStart_toStartOf="@+id/cocaCola"
        app:layout_constraintTop_toBottomOf="@+id/sodaDescription"
        app:layout_constraintEnd_toEndOf="@+id/cocaCola"
        android:textColor="@color/white"
        android:fontFamily="@font/interbold"
        android:textSize="20sp"
        />



    <!--  PEPSI -->
    <View
        android:id="@+id/pepsi"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/white_card"
        app:layout_constraintTop_toBottomOf="@+id/headerContainer"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintWidth_percent="0.45"
        app:layout_constraintHeight_percent="0.25"
        android:layout_marginTop="20dp"
        />

    <!--  pepsiImg  -->
    <ImageView
        android:id="@+id/pepsiImg"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:src="@drawable/pepsi"
        android:background="@drawable/rounded_corners"
        app:layout_constraintStart_toStartOf="@+id/pepsi"
        app:layout_constraintTop_toTopOf="@+id/pepsi"
        app:layout_constraintEnd_toEndOf="@+id/pepsi"
        android:contentDescription="@string/sodaPepsiDesc" />


    <!--  pepsiName  -->
    <TextView
        android:id="@+id/pepsiName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sodaPepsi"
        app:layout_constraintStart_toStartOf="@+id/pepsi"
        app:layout_constraintTop_toBottomOf="@+id/pepsiImg"
        app:layout_constraintEnd_toEndOf="@+id/pepsi"
        android:textColor="@color/black"
        android:fontFamily="@font/interbold"
        android:textSize="20sp"

        />

    <!--  pepsiDescription  -->
    <TextView
        android:id="@+id/pepsiDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/soda"
        app:layout_constraintStart_toStartOf="@+id/pepsi"
        app:layout_constraintTop_toBottomOf="@+id/pepsiName"
        app:layout_constraintEnd_toEndOf="@+id/pepsi"
        android:textColor="@color/description"
        android:fontFamily="@font/interbold"
        android:textSize="15sp"

        />

    <!--  pepsiWrap  -->
    <View
        android:id="@+id/pepsiWrap"
        android:layout_width="185dp"
        android:layout_height="32dp"
        android:layout_marginTop="0dp"
        app:layout_constraintStart_toStartOf="@+id/pepsi"
        app:layout_constraintTop_toBottomOf="@+id/pepsiDescription"
        app:layout_constraintEnd_toEndOf="@+id/pepsi"
        app:layout_constraintBottom_toBottomOf="@+id/pepsi"
        android:background="@drawable/rounded_price"

        />


    <!--  pepsiPrice  -->
    <TextView
        android:id="@+id/pepsiPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sodaPepsiPrice"
        android:layout_marginTop="1dp"
        app:layout_constraintStart_toStartOf="@+id/pepsi"
        app:layout_constraintTop_toBottomOf="@+id/pepsiDescription"
        app:layout_constraintEnd_toEndOf="@+id/pepsi"
        android:textColor="@color/white"
        android:fontFamily="@font/interbold"
        android:textSize="20sp"
        />



    <!-- GUARANÁ JESUS -->
    <View
        android:id="@+id/guaranaJesus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/white_card"
        app:layout_constraintTop_toBottomOf="@+id/cocaCola"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintWidth_percent="0.45"
        app:layout_constraintHeight_percent="0.25"
        android:layout_marginTop="20dp"
        />

    <!--  guaranaJesusImg  -->
    <ImageView
        android:id="@+id/guaranaJesusImg"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:src="@drawable/guaranajesus"
        android:background="@drawable/rounded_corners"
        app:layout_constraintStart_toStartOf="@+id/guaranaJesus"
        app:layout_constraintTop_toTopOf="@+id/guaranaJesus"
        app:layout_constraintEnd_toEndOf="@+id/guaranaJesus"
        android:contentDescription="@string/sodaGuaranaJesusDesc" />


    <!--  guaranaJesusName  -->
    <TextView
        android:id="@+id/guaranaJesusName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sodaGuaranaJesus"
        app:layout_constraintStart_toStartOf="@+id/guaranaJesus"
        app:layout_constraintTop_toBottomOf="@+id/guaranaJesusImg"
        app:layout_constraintEnd_toEndOf="@+id/guaranaJesus"
        android:textColor="@color/black"
        android:fontFamily="@font/interbold"
        android:textSize="20sp"

        />

    <!--  guaranaJesusDescription  -->
    <TextView
        android:id="@+id/guaranaJesusDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/soda"
        app:layout_constraintStart_toStartOf="@+id/guaranaJesus"
        app:layout_constraintTop_toBottomOf="@+id/guaranaJesusName"
        app:layout_constraintEnd_toEndOf="@+id/guaranaJesus"
        android:textColor="@color/description"
        android:fontFamily="@font/interbold"
        android:textSize="15sp"

        />

    <!--  guaranaJesusWrap  -->
    <View
        android:id="@+id/guaranaJesusWrap"
        android:layout_width="185dp"
        android:layout_height="32dp"
        android:layout_marginTop="0dp"
        app:layout_constraintStart_toStartOf="@+id/guaranaJesus"
        app:layout_constraintTop_toBottomOf="@+id/guaranaJesusDescription"
        app:layout_constraintEnd_toEndOf="@+id/guaranaJesus"
        app:layout_constraintBottom_toBottomOf="@+id/guaranaJesus"
        android:background="@drawable/rounded_price"

        />


    <!--  guaranaJesusPrice  -->
    <TextView
        android:id="@+id/guaranaJesusPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sodaGuaranaJesusPrice"
        android:layout_marginTop="1dp"
        app:layout_constraintStart_toStartOf="@+id/guaranaJesus"
        app:layout_constraintTop_toBottomOf="@+id/guaranaJesusDescription"
        app:layout_constraintEnd_toEndOf="@+id/guaranaJesus"
        android:textColor="@color/white"
        android:fontFamily="@font/interbold"
        android:textSize="20sp"
        />


    <!--  SÃO GERALDO -->
    <View
        android:id="@+id/saoGeraldo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/white_card"
        app:layout_constraintTop_toBottomOf="@+id/pepsi"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintWidth_percent="0.45"
        app:layout_constraintHeight_percent="0.25"
        android:layout_marginTop="20dp"
        />

    <!--  saoGeraldoImg  -->
    <ImageView
        android:id="@+id/saoGeraldoImg"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:src="@drawable/caju"
        android:background="@drawable/rounded_corners"
        app:layout_constraintStart_toStartOf="@+id/saoGeraldo"
        app:layout_constraintTop_toTopOf="@+id/saoGeraldo"
        app:layout_constraintEnd_toEndOf="@+id/saoGeraldo"
        android:contentDescription="@string/sodaSaoGeraldoDesc" />


    <!--  saoGeraldoName  -->
    <TextView
        android:id="@+id/saoGeraldoName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sodaSaoGeraldo"
        app:layout_constraintStart_toStartOf="@+id/saoGeraldo"
        app:layout_constraintTop_toBottomOf="@+id/saoGeraldoImg"
        app:layout_constraintEnd_toEndOf="@+id/saoGeraldo"
        android:textColor="@color/black"
        android:fontFamily="@font/interbold"
        android:textSize="20sp"

        />

    <!--  saoGeraldoDescription  -->
    <TextView
        android:id="@+id/saoGeraldoDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/soda"
        app:layout_constraintStart_toStartOf="@+id/saoGeraldo"
        app:layout_constraintTop_toBottomOf="@+id/saoGeraldoName"
        app:layout_constraintEnd_toEndOf="@+id/saoGeraldo"
        android:textColor="@color/description"
        android:fontFamily="@font/interbold"
        android:textSize="15sp"

        />

    <!--  saoGeraldoWrap  -->
    <View
        android:id="@+id/saoGeraldoWrap"
        android:layout_width="185dp"
        android:layout_height="32dp"
        android:layout_marginTop="0dp"
        app:layout_constraintStart_toStartOf="@+id/saoGeraldo"
        app:layout_constraintTop_toBottomOf="@+id/saoGeraldoDescription"
        app:layout_constraintEnd_toEndOf="@+id/saoGeraldo"
        app:layout_constraintBottom_toBottomOf="@+id/saoGeraldo"
        android:background="@drawable/rounded_price"

        />


    <!--  saoGeraldoPrice  -->
    <TextView
        android:id="@+id/saoGeraldoPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sodaSaoGeraldoPrice"
        android:layout_marginTop="1dp"
        app:layout_constraintStart_toStartOf="@+id/saoGeraldo"
        app:layout_constraintTop_toBottomOf="@+id/saoGeraldoDescription"
        app:layout_constraintEnd_toEndOf="@+id/saoGeraldo"
        android:textColor="@color/white"
        android:fontFamily="@font/interbold"
        android:textSize="20sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>